Re-organised the build script to clean out the objs dir after each build. Changed the restrictions so we can use local exception handling. Added a basic last_chance_handler for local exceptions.

--- a/rts/makefile
+++ b/rts/makefile
@@ -23,7 +23,10 @@ OBJS	=	obj/ada.o \
 		obj/s-stoele.o \
 		obj/s-atacco.o \
 		obj/s-maccod.o \
-		obj/system.o
+		obj/system.o \
+		obj/last_chance_handler.o
+		# obj/interfac.o \
+		# obj/i-c.o
 ALIS	=	$(OBJS:.o=.ali)
 
 all: $(LIBNAME)
@@ -47,6 +50,12 @@ obj/gnat.o obj/gnat.ali: src/common/gnat.ads
 obj/g-souinf.o obj/g-souinf.ali: src/common/g-souinf.ads
 	$(TARGET)gcc $(FLAGS) src/common/g-souinf.ads -o obj/g-souinf.o
 
+# obj/interfac.o obj/interfac.ali: src/common/interfac.ads
+# 	$(TARGET)gcc $(FLAGS) src/common/interfac.ads -o obj/interfac.o
+
+# obj/i-c.o obj/i-c.ali: src/common/i-c.ads src/common/i-c.adb
+# 	$(TARGET)gcc $(FLAGS) src/common/i-c.adb -o obj/i-c.o
+
 obj/s-stoele.o obj/s-stoele.ali: src/common/s-stoele.ads src/common/s-stoele.adb
 	$(TARGET)gcc $(FLAGS) src/common/s-stoele.adb -o obj/s-stoele.o
 
@@ -59,6 +68,9 @@ obj/s-maccod.o obj/s-maccod.ali: src/common/s-maccod.ads
 obj/system.o obj/system.ali: src/boards/$(BOARD)/system.ads
 	$(TARGET)gcc $(FLAGS) src/boards/$(BOARD)/system.ads -o obj/system.o
 
+
+obj/last_chance_handler.o obj/last_chance_handler.ali: src/common/last_chance_handler.adb src/common/last_chance_handler.ads
+	$(TARGET)gcc $(FLAGS) src/common/last_chance_handler.adb -o obj/last_chance_handler.o
 
 .PHONY: clean
 
